--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12065,7 +12065,7 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-#mainContent {
+#main-content {
   position: relative;
   background-image: url("../imgs/muscular-build-man.jpg");
   background-size: cover;
@@ -12073,7 +12073,7 @@ textarea.form-control-lg {
   background-repeat: no-repeat;
   min-height: 100vh;
 }
-#mainContent::before {
+#main-content::before {
   content: "";
   position: absolute;
   top: 0;
@@ -12083,7 +12083,30 @@ textarea.form-control-lg {
   background: rgba(0, 0, 0, 0.6);
   z-index: 1;
 }
-#mainContent > * {
+#main-content > * {
+  position: relative;
+  z-index: 2;
+}
+
+#about-main-content {
+  position: relative;
+  background-image: url("../imgs/gym-with-indoor-cycling-equipment.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+#about-main-content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+}
+#about-main-content > * {
   position: relative;
   z-index: 2;
 }
