--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,13 +27,10 @@ $btn-padding-x: 20px;
 $btn-font-size: 16px;
 $btn-font-weight: bold;
 
-
-
-
-
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
-#mainContent {
+
+#main-content {
   position: relative; 
   background-image: url("../imgs/muscular-build-man.jpg"); 
   background-size: cover;   
@@ -56,6 +53,35 @@ $btn-font-weight: bold;
     z-index: 2;
   }
 }
+
+#about-main-content {
+  position: relative; 
+  background-image: url("../imgs/gym-with-indoor-cycling-equipment.jpg"); 
+  background-size: cover;   
+  background-position: center; 
+  background-repeat: no-repeat; 
+  min-height: 100vh;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7); 
+    z-index: 1; 
+  }
+  > * {
+    position: relative;
+    z-index: 2;
+  }
+}
+
+
+
+
+
 
 .navbar-nav .nav-link {
   transition: filter 0.3s ease-in-out;
@@ -111,3 +137,5 @@ $btn-font-weight: bold;
     }
   }
 }
+
+
