--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12111,6 +12111,29 @@ textarea.form-control-lg {
   z-index: 2;
 }
 
+#contact-main-content {
+  position: relative;
+  background-image: url("../imgs/gym-with-indoor-cycling-equipment.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+#contact-main-content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+}
+#contact-main-content > * {
+  position: relative;
+  z-index: 2;
+}
+
 .navbar-nav .nav-link {
   transition: filter 0.3s ease-in-out;
 }
