--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,6 +27,20 @@ $btn-padding-x: 20px;
 $btn-font-size: 16px;
 $btn-font-weight: bold;
 
+
+$input-bg: #ffffff;
+$input-border-color: #ccc;
+$input-border-radius: 0;
+$input-border-radius-lg: 0;
+$input-padding-y: 0.75rem;
+$input-padding-x: 1rem;
+$input-focus-border-color: #ff6b35;
+$input-focus-box-shadow: 0 0 0 0.25rem rgba(255, 107, 53, 0.25);
+$input-color: #333;
+$input-placeholder-color: #999;
+$form-label-margin-bottom: 0.5rem;
+$form-label-font-weight: 600;
+
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 
